# DSL2750U_U1_GPL_IN_1.08_IN

./: README.md  how_to_make.docx
RTL8676xx/: BaseVar.mk  Config.in  Makefile  Rules.make  quicktarget.mk  startUML
RTL8676xx/scripts/: .conf.o.cmd  .kxgettext.o.cmd  .mconf.o.cmd  .zconf.tab.o.cmd  Makefile  confdata.c
RTL8676xx/scripts/lxdialog/: .checklist.o.cmd  .inputbox.o.cmd  .menubox.o.cmd  .textbox.o.cmd  .util.o.cmd  .yesno.o.cmd
RTL8676xx/src/: BoardConfig.in  Makefile
RTL8676xx/src/apps/: Config.debug.in  Config.in  Makefile
RTL8676xx/src/apps/captival-portal/: Config.in  Makefile  captival  captival-portal.c  captival-portal.h  dns.c  dns.h  httpd.c  httpd.h  iptables.c  iptables.h  timer.c  timer.h
RTL8676xx/src/apps/include/: btn_app.h  cfg_api.h  common.h  iconv.h  ipt_common.h  pc_api.h  tbserror.h  tbsipv6.h  tbsmsg.h  tbstype.h  tbsutil.h  warnlog.h
RTL8676xx/src/apps/ipv6/: Config.in  Makefile  ifip6  ip6aac  (+5 more)
RTL8676xx/src/boot/: Makefile
RTL8676xx/src/driver/: Config.in  Makefile
RTL8676xx/src/driver/dsl/infineon/drv_dsl_cpe_api/_legacy/: ChangeLog  Makefile.am  configure.in  ms.sh
RTL8676xx/src/driver/dsl/infineon/drv_dsl_cpe_api/_legacy/doc/api/fm/: BackCover.fm  drv_dsl_cpe_api.book  drv_dsl_cpe_api_reference_common.fm  drv_dsl_cpe_api_reference_mib.fm  frontcover.fm  references.fm  revhistory.fm
RTL8676xx/src/driver/dsl/infineon/drv_dsl_cpe_api/_legacy/doc/mib/: doxyconfig_mib.danube
RTL8676xx/src/driver/dsl/infineon/drv_dsl_cpe_api/_legacy/doc/mib/xml/: dtd_3.0.dtd
RTL8676xx/src/driver/dsl/infineon/drv_dsl_cpe_api/_legacy/doc/web/: doxyconfig_web.danube
RTL8676xx/src/driver/dsl/infineon/drv_dsl_cpe_api/_legacy/scripts/: .indent.pro  doxy2fm_common.xsl
RTL8676xx/src/driver/dsl/infineon/drv_dsl_cpe_api/_legacy/src/include/: drv_dsl_cpe_api_config.h.in  ifx_adsl_ceoc.h  ifx_adsl_cmvs.h  ifx_adsl_led.h  ifx_adsl_linux.h  ifx_adsl_mib.h  ifx_adsl_mib_ioctl.h
RTL8676xx/src/driver/dsl/infineon/drv_dsl_cpe_api/driver/: ChangeLog  configure.in  std.lnt
RTL8676xx/src/driver/dsl/infineon/drv_dsl_cpe_api/driver/_legacy/: drv_dsl_cpe_api_legacy.pjt
RTL8676xx/src/driver/dsl/infineon/drv_dsl_cpe_api/driver/_legacy/doc/: doxyconfig.danube  stylesheet.css
RTL8676xx/src/driver/dsl/infineon/drv_dsl_cpe_api/driver/_legacy/doc/api/fm/: drv_dsl_cpe_api_reference_web.fm  terminology.fm
RTL8676xx/src/driver/dsl/infineon/drv_dsl_cpe_api/driver/_legacy/doc/api/variables/: variables_danube.fm
RTL8676xx/src/driver/dsl/infineon/drv_dsl_cpe_api/driver/_legacy/doc/common/: doxyconfig_common.danube
RTL8676xx/src/driver/dsl/infineon/drv_dsl_cpe_api/driver/_legacy/doc/web/xml/: ifx-vtdd.ent
RTL8676xx/src/driver/dsl/infineon/drv_dsl_cpe_api/driver/_legacy/scripts/: collect.xsl  doxy2fm.xsl  doxy2fm_mib.xsl  doxy2fm_web.xsl
RTL8676xx/src/driver/dsl/infineon/drv_dsl_cpe_api/driver/_legacy/src/: Makefile.am
RTL8676xx/src/driver/dsl/infineon/drv_dsl_cpe_api/driver/_legacy/src/include/: drv_dsl_cpe_api_danube_kernel_config.h  ifx_adsl_autoboot.h  ifx_adsl_basic.h  ifx_adsl_basic_ioctl.h  ifx_adsl_bsp.h  ifx_adsl_mib_cmv.h  ifx_adsl_mib_ioctl_old.h
RTL8676xx/src/driver/dsl/infineon/drv_dsl_cpe_api/driver/doc/: doxyconfig.vinax
RTL8676xx/src/driver/dsl/infineon/drv_dsl_cpe_api/driver/doc/adsl_mib/: doxyconfig_adsl_mib
RTL8676xx/src/driver/dsl/infineon/drv_dsl_cpe_api/driver/doc/api/figures/: api_internals.emf  pm_equation_3.emf  pm_software_structure.emf
RTL8676xx/src/driver/dsl/infineon/drv_dsl_cpe_api/driver/doc/api/fm/: Addendum.fm  drv_dsl_cpe_api.fm  drv_dsl_cpe_apiLOF.fm  drv_dsl_cpe_apiTOC.fm  drv_dsl_cpe_api_transition_guide.fm  drv_dsl_cpe_api_vinax.book
RTL8676xx/src/driver/dsl/infineon/drv_dsl_cpe_api/driver/doc/api/org_fig/: api_internals.vsd  pm_software_structure.vsd
RTL8676xx/src/driver/dsl/infineon/drv_dsl_cpe_api/driver/doc/release/fm/: CPE-API_ReleaseNotes.fm
RTL8676xx/src/driver/dsl/infineon/drv_dsl_cpe_api/driver/doc/xml/: wg_dtd.cfg
RTL8676xx/src/driver/dsl/infineon/drv_dsl_cpe_api/driver/installer/: License.rtf  setup.nsi  setup_danube.nsi
RTL8676xx/src/driver/dsl/infineon/drv_dsl_cpe_api/driver/scripts/: blacklist.xml  doxy2fm_adsl_mib.xsl  header2cli.sh  inst_drv_dsl_cpe_api_amazon_se.sh
RTL8676xx/src/driver/dsl/infineon/drv_dsl_cpe_api/driver/src/: Makefile.am
RTL8676xx/src/driver/dsl/infineon/drv_dsl_cpe_api/driver/src/include/: drv_dsl_cpe_api.h  drv_dsl_cpe_api_adslmib_ioctl.h  drv_dsl_cpe_api_amazon_se_kernel_config.h  drv_dsl_cpe_api_ceoc_intern.h  drv_dsl_cpe_api_danube_kernel_config.h  drv_dsl_cpe_api_error.h  drv_dsl_cpe_api_g997.h  drv_dsl_cpe_api_pm.h  drv_dsl_cpe_autoboot.h  drv_dsl_cpe_cmv_danube.h  drv_dsl_cpe_danube.h  drv_dsl_cpe_danube_ctx.h  drv_dsl_cpe_debug.h  drv_dsl_cpe_device.h  drv_dsl_cpe_device_ceoc.h  drv_dsl_cpe_device_g997.h  drv_dsl_cpe_intern_ceoc.h  drv_dsl_cpe_intern_pm.h  drv_dsl_cpe_intern_sar.h  drv_dsl_cpe_os_linux.h  drv_dsl_cpe_timeout.h  drv_dsl_cpe_vinax_mdio.h  drv_dsl_cpe_vinax_msg_utopia_posphy.h  drv_dsl_cpe_vinax_msg_xtc.h
RTL8676xx/src/filesystem/: Makefile
RTL8676xx/src/include/: btn.h  flash_layout.h  flash_layout_kernel.h  led.h  mark.h  spi_flash.h  tbs_ioctl.h  tbs_message.h
RTL8676xx/src/kernel/: Config.in  Makefile
RTL8676xx/src/opensource/: Config.in  Makefile
RTL8676xx/test/its/: test.tcl
RTL8676xx/test/uts/: ut_common.h
RTL8676xx/tools/: buildImage.sh  buildRootfs.sh  build_release_version.sh  common_mkdev.sh  count_modules_size.sh  csv2wiki.sh  merge_page  mkbuilddir  mklibs.py  mknewlink  mksymlink  prepareBLP.sh  release_dir  sourcedir.sh  svn_check.py  switch.sh  table2template.sh  wiki2csv.sh
RTL8676xx/tools/src/: Makefile
customer/apps/cli/: Makefile  cli_comm.h  cli_strres.h  cmd
customer/apps/html/: Config.in  Makefile  factory_mode.html  html.c  readme.txt  webAuth.xml
customer/apps/logic/: Config.in  Makefile  logic  logic.h
customer/product/DSL2750U/: app_btn_cfg.c  arch.mk  config.xml  config_flash.xml  defconfig  getverinfo.sh  hidden_page.html  hidenPage.sh  ip6conf.sh  mkdev.sh  product.c  releasenotes.html
(+4308 files in other folders)
